Dark mode scrollbar and CSS based images to prevent webpack-dev from 404ing images when changing anything but the HTML file

--- a/src/style.scss
+++ b/src/style.scss
@@ -23,14 +23,46 @@ $font: "Atkinson Hyperlegible", "Varela Round", system-ui, -apple-system, "Segoe
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 @import "bootstrap";
+@import "bootstrap-icons/font/bootstrap-icons.css";
 @import "glyphicons.scss";
 
 html {
   scroll-padding-top: calc(4.5rem - 1px);
+  scrollbar-color: #737373 #38383D;
+  scrollbar-width: auto;
+}
+
+/* width */
+::-webkit-scrollbar {
+  // width: auto;
+  visibility: visible;  // must have some style to apply the colors
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #38383D;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #737373;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #8f8f8f;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: white;
 }
 
 body {
   letter-spacing: 0.0625em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $font;
 }
 
 #mainNav {
@@ -129,7 +161,7 @@ body {
 }
 
 .masthead h1 {
-  font-family: $font;
+  // font-family: $font;
   font-size: 2.5rem;
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
@@ -179,6 +211,16 @@ body {
 .projects-section .project-text {
   padding: 3rem;
   font-size: 90%;
+}
+
+.projects-section #verify-vax {
+  content: url("img/VerifyVax-Screenshot.png");
+}
+.projects-section #carmen {
+  content: url("img/Carmen-Screenshot.png");
+}
+.projects-section #comps {
+  content: url("img/Comps-Screenshot.png");
 }
 
 @include media-breakpoint-up(lg) {
@@ -242,24 +284,24 @@ body {
 .contact-section {
   padding-top: 2rem;
 }
-.contact-section .card {
-  border: 0;
-  border-bottom: 0.25rem solid $primary;
-}
-.contact-section .card h4, .contact-section .card .h4 {
-  font-size: 0.8rem;
-  font-family: $font;
-  text-transform: uppercase;
-  letter-spacing: 0.15rem;
-}
-.contact-section .card hr {
-  border-color: $primary;
-  border-width: 0.25rem;
-  width: 3rem;
-}
-.contact-section .social {
+// .contact-section .card {
+//   border: 0;
+//   border-bottom: 0.25rem solid $primary;
+// }
+// .contact-section .card h4, .contact-section .card .h4 {
+//   font-size: 0.8rem;
+//   font-family: $font;
+//   text-transform: uppercase;
+//   letter-spacing: 0.15rem;
+// }
+// .contact-section .card hr {
+//   border-color: $primary;
+//   border-width: 0.25rem;
+//   width: 3rem;
+// }
+// .contact-section .social {
   // margin-top: 5rem;
-}
+// }
 .contact-section .social a {
   text-align: center;
   height: 3rem;
